Update .gitignore to exclude more files and directories
Added additional entries to .gitignore for virtual environments, data files, and cache directories.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 __pycache__/
 .env
 data/
+
+
+# Virtual env
+venv/
+
+# Data & indices
+data/
+*.index
+*.pkl
+
+# HuggingFace / ML cache
+.cache/
+**/.cache/
+models/
+
+# OS
+__pycache__/
+
